<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HealthTrak</string>
    <string name="title_my_details">My Details</string>
    <string name="title_my_foods"> My Foods</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_log_out">Log Out</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="start_tracking_button_text">Start Tracking</string>
    <string name="new_account_label">Create New Account?</string>
    <string name="log_out">Logout</string>
    <string name="bmi_label">BMI</string>
    <string name="welcome_header">Welcome</string>
    <string name="welcome_message">Welcome to HealthTrak. To get you started, please enter your BMI.</string>
	<string name="account_setup_break"> -- or -- </string>
	<string name="account_setup_go">Go</string>
	<string name="title_exit">Exit</string>
	<string name="update_button_text">Update</string>
	<string name="add_new_food">Add New Food</string>
	<string name="food_name_label">Food Name</string>
	<string name="calories_label">Calories</string>
	<string name="fat_label">Fat (grams)</string>
	<string name="save_button_text">Save</string>
	<string name="cancel_button_text">Cancel</string>
</resources>
